Fix ticket modal from closing on mobile while entering buyer details (#1042)
* Remove body click functionality

* remove close widget on resize

* Fix the position of modal in mobile

--- a/funnel/static/sass/_project.scss
+++ b/funnel/static/sass/_project.scss
@@ -405,7 +405,7 @@
 
   .tickets-wrapper__modal--show {
     position: fixed;
-    top: 56px;
+    top: 52px;
     background: $mui-bg-color-primary;
     left: 0;
     right: 0;
