--- a/funnel/static/sass/_schedule.scss
+++ b/funnel/static/sass/_schedule.scss
@@ -96,7 +96,7 @@
       overflow-x: auto;
       position: sticky;
       position: -webkit-sticky;
-      top: 56px;
+      top: 52px;
       order: 1;
       z-index: 4;
       border: none;
